{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 249,
  "lineage": "de5a0cc5-a465-6b08-2be2-b5b9d715378f",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "availability_zone": "No-Zone",
                "id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/loadBalancers/azudacity-lb/frontendIPConfigurations/azudacity-PublicIPAddress",
                "name": "azudacity-PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/publicIPAddresses/azudacity-public-ip"
              }
            ],
            "id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/loadBalancers/azudacity-lb",
            "location": "eastus",
            "name": "azudacity-lb",
            "resource_group_name": "azudacity-resources",
            "sku": "Basic",
            "tags": {
              "AppName": "AzureInfra"
            }
          },
          "dependencies": [
            "azurerm_public_ip.main",
            "azurerm_resource_group.main",
            "random_string.fqdn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/loadBalancers/azudacity-lb/backendAddressPools/azudacity-BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/loadBalancers/azudacity-lb",
            "name": "azudacity-BackEndAddressPool",
            "resource_group_name": "azudacity-resources"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_public_ip.main",
            "azurerm_resource_group.main",
            "random_string.fqdn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/loadBalancers/azudacity-lb/probes/azudacity-http-running-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/loadBalancers/azudacity-lb",
            "name": "azudacity-http-running-probe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp",
            "resource_group_name": "azudacity-resources"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_public_ip.main",
            "azurerm_resource_group.main",
            "random_string.fqdn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/loadBalancers/azudacity-lb/backendAddressPools/azudacity-BackEndAddressPool",
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/loadBalancers/azudacity-lb/frontendIPConfigurations/azudacity-PublicIPAddress",
            "frontend_ip_configuration_name": "azudacity-PublicIPAddress",
            "frontend_port": 8080,
            "id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/loadBalancers/azudacity-lb/loadBalancingRules/http",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/loadBalancers/azudacity-lb",
            "name": "http",
            "probe_id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/loadBalancers/azudacity-lb/probes/azudacity-http-running-probe",
            "protocol": "Tcp",
            "resource_group_name": "azudacity-resources"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_lb_probe.main",
            "azurerm_public_ip.main",
            "azurerm_resource_group.main",
            "random_string.fqdn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/networkInterfaces/azudacity-0-nic",
            "internal_domain_name_suffix": "y0pqwsviqozefneb4zb1x3azwc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/virtualNetworks/azudacity-network/subnets/azudacity-internal-subnet"
              }
            ],
            "location": "eastus",
            "name": "azudacity-0-nic",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "azudacity-resources",
            "tags": {
              "AppName": "AzureInfra"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/networkInterfaces/azudacity-1-nic",
            "internal_domain_name_suffix": "y0pqwsviqozefneb4zb1x3azwc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/virtualNetworks/azudacity-network/subnets/azudacity-internal-subnet"
              }
            ],
            "location": "eastus",
            "name": "azudacity-1-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "azudacity-resources",
            "tags": {
              "AppName": "AzureInfra"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/loadBalancers/azudacity-lb/backendAddressPools/azudacity-BackEndAddressPool",
            "id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/networkInterfaces/azudacity-0-nic/ipConfigurations/internal|/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/loadBalancers/azudacity-lb/backendAddressPools/azudacity-BackEndAddressPool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/networkInterfaces/azudacity-0-nic"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_network_interface.main",
            "azurerm_public_ip.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main",
            "random_string.fqdn"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/loadBalancers/azudacity-lb/backendAddressPools/azudacity-BackEndAddressPool",
            "id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/networkInterfaces/azudacity-1-nic/ipConfigurations/internal|/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/loadBalancers/azudacity-lb/backendAddressPools/azudacity-BackEndAddressPool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/networkInterfaces/azudacity-1-nic"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_network_interface.main",
            "azurerm_public_ip.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main",
            "random_string.fqdn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/networkSecurityGroups/azudacity-nsg",
            "location": "eastus",
            "name": "azudacity-nsg",
            "resource_group_name": "azudacity-resources",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "denyinbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/networkSecurityGroups/azudacity-nsg/securityRules/azudacity-nsg-deny-rule",
            "name": "azudacity-nsg-deny-rule",
            "network_security_group_name": "azudacity-nsg",
            "priority": 4000,
            "protocol": "*",
            "resource_group_name": "azudacity-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "httpinbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/networkSecurityGroups/azudacity-nsg/securityRules/azudacity-nsg-http-rule",
            "name": "azudacity-nsg-http-rule",
            "network_security_group_name": "azudacity-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "azudacity-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "lbinbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/networkSecurityGroups/azudacity-nsg/securityRules/azudacity-nsg-lb-rule",
            "name": "azudacity-nsg-lb-rule",
            "network_security_group_name": "azudacity-nsg",
            "priority": 130,
            "protocol": "*",
            "resource_group_name": "azudacity-resources",
            "source_address_prefix": "AzureLoadBalancer",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/networkSecurityGroups/azudacity-nsg/securityRules/azudacity-nsg-outbound-rule",
            "name": "azudacity-nsg-outbound-rule",
            "network_security_group_name": "azudacity-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "azudacity-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "vnetinbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/networkSecurityGroups/azudacity-nsg/securityRules/azudacity-nsg-vnet-rule",
            "name": "azudacity-nsg-vnet-rule",
            "network_security_group_name": "azudacity-nsg",
            "priority": 120,
            "protocol": "*",
            "resource_group_name": "azudacity-resources",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "domain_name_label": "nbxekn",
            "fqdn": "nbxekn.eastus.cloudapp.azure.com",
            "id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/publicIPAddresses/azudacity-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.211.27.35",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "azudacity-public-ip",
            "resource_group_name": "azudacity-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "AppName": "AzureInfra"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "random_string.fqdn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/virtualNetworks/azudacity-network/subnets/azudacity-internal-subnet",
            "name": "azudacity-internal-subnet",
            "resource_group_name": "azudacity-resources",
            "virtual_network_name": "azudacity-network"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/virtualNetworks/azudacity-network/subnets/azudacity-internal-subnet",
            "network_security_group_id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/networkSecurityGroups/azudacity-nsg",
            "subnet_id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/virtualNetworks/azudacity-network/subnets/azudacity-internal-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/22"
            ],
            "guid": "4a0b9fc6-83a8-42b2-b481-f643bbf419b2",
            "id": "/subscriptions/3b8f4857-7185-47c9-b736-4bbf6e8bb2c4/resourceGroups/azudacity-resources/providers/Microsoft.Network/virtualNetworks/azudacity-network",
            "location": "eastus",
            "name": "azudacity-network",
            "resource_group_name": "azudacity-resources",
            "tags": {
              "AppName": "AzureInfra"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}